force-app/main/default/objects/Order__c/fields/BizType2__c.field-meta.xml
<CustomField>
    <fullName>BizType2__c</fullName>
    <description>사업유형2</description>
    <label>Biz Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ITO</fullName>
            </value>
            <value>
                <fullName>구축형</fullName>
            </value>
            <value>
                <fullName>통신</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>