force-app/main/default/objects/Order__c/fields/ConnectionClassification__c.field-meta.xml
<CustomField>
    <fullName>ConnectionClassification__c</fullName>
    <label>Connection Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>본사</fullName>
            </value>
            <value>
                <fullName>연결</fullName>
            </value>
            <value>
                <fullName>연결차감</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>