force-app/main/default/objects/Order__c/fields/Domestic_Overseas__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Overseas__c</fullName>
    <description>국내/해외</description>
    <label>Domestic/Overseas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>