force-app/main/default/objects/Order__c/fields/Domestic_Overseas_Name__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Overseas_Name__c</fullName>
    <description>국내/해외명</description>
    <label>Domestic/Overseas Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>