force-app/main/default/objects/Order__c/fields/FiscalPeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>FiscalPeriodFrom__c</fullName>
    <description>회계연도(From)</description>
    <label>Fiscal Period(From)</label>
    <type>Date</type>
</CustomField>