force-app/main/default/objects/Order__c/fields/FiscalPeriodTo__c.field-meta.xml
<CustomField>
    <fullName>FiscalPeriodTo__c</fullName>
    <description>회계연도(To)</description>
    <label>Fiscal Period(To)</label>
    <type>Date</type>
</CustomField>