force-app/main/default/objects/Order__c/fields/Group_In_Out__c.field-meta.xml
<CustomField>
    <fullName>Group_In_Out__c</fullName>
    <label>Group in/out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>