force-app/main/default/objects/Order__c/fields/Group_In_Out_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_In_Out_Name__c</fullName>
    <description>그룹내/외명</description>
    <label>Group in/out Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group In</fullName>
            </value>
            <value>
                <fullName>Group Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>