force-app/main/default/objects/Order__c/fields/MonthDivision__c.field-meta.xml
<CustomField>
    <fullName>MonthDivision__c</fullName>
    <description>월구분</description>
    <label>Month division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1월</fullName>
            </value>
            <value>
                <fullName>2월</fullName>
            </value>
            <value>
                <fullName>3월</fullName>
            </value>
            <value>
                <fullName>4월</fullName>
            </value>
            <value>
                <fullName>5월</fullName>
            </value>
            <value>
                <fullName>6월</fullName>
            </value>
            <value>
                <fullName>7월</fullName>
            </value>
            <value>
                <fullName>8월</fullName>
            </value>
            <value>
                <fullName>9월</fullName>
            </value>
            <value>
                <fullName>10월</fullName>
            </value>
            <value>
                <fullName>11월</fullName>
            </value>
            <value>
                <fullName>12월</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>