force-app/main/default/objects/Order__c/fields/OperatingProfit__c.field-meta.xml
<CustomField>
    <fullName>OperatingProfit__c</fullName>
    <description>영업이익</description>
    <label>Operating Profit</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>