force-app/main/default/objects/Order__c/fields/OrderDivision__c.field-meta.xml
<CustomField>
    <fullName>OrderDivision__c</fullName>
    <description>수주사업부</description>
    <label>Order Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT혁신사업부</fullName>
            </value>
            <value>
                <fullName>개발실</fullName>
            </value>
            <value>
                <fullName>법인/자회사</fullName>
            </value>
            <value>
                <fullName>해외법인/자회사</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>