force-app/main/default/objects/Order__c/fields/OrderGroup__c.field-meta.xml
<CustomField>
    <fullName>OrderGroup__c</fullName>
    <description>수주그룹</description>
    <label>Order Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>사업그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>대외사업그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>해외법인/자회사</fullName>
            </value>
            <value>
                <fullName>에스원CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>물산리조트CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>엔지니어링CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>IMK CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>제일기획CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>물산건설CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>호텔CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>물산상사CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>Knox Portal서비스그룹(솔루션개발)</fullName>
            </value>
            <value>
                <fullName>물산패션CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>중공업CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>서비스/EPC사업팀</fullName>
            </value>
            <value>
                <fullName>법인/자회사</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>