force-app/main/default/objects/Order__c/fields/OrderTeam__c.field-meta.xml
<CustomField>
    <fullName>OrderTeam__c</fullName>
    <description>수주팀</description>
    <label>Order Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>서비스/EPC사업팀</fullName>
            </value>
            <value>
                <fullName>해외법인/자회사</fullName>
            </value>
            <value>
                <fullName>솔루션개발팀</fullName>
            </value>
            <value>
                <fullName>법인/자회사</fullName>
            </value>
            <value>
                <fullName>IT혁신사업부</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>