force-app/main/default/objects/Order__c/fields/PracticalContribution__c.field-meta.xml
<CustomField>
    <fullName>PracticalContribution__c</fullName>
    <description>실기여(사업부)</description>
    <label>Practical Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>실손익</fullName>
            </value>
            <value>
                <fullName>기여손익</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>