force-app/main/default/objects/Order__c/fields/SalesDivision__c.field-meta.xml
<CustomField>
    <fullName>SalesDivision__c</fullName>
    <description>매출사업부</description>
    <label>Sales Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT혁신사업부</fullName>
            </value>
            <value>
                <fullName>보안사업부</fullName>
            </value>
            <value>
                <fullName>개발실</fullName>
            </value>
            <value>
                <fullName>클라우드사업부</fullName>
            </value>
            <value>
                <fullName>인텔리전트팩토리사업부</fullName>
            </value>
            <value>
                <fullName>솔루션사업부</fullName>
            </value>
            <value>
                <fullName>해외법인/자회사</fullName>
            </value>
            <value>
                <fullName>물류사업부문</fullName>
            </value>
            <value>
                <fullName>전사직속</fullName>
            </value>
            <value>
                <fullName>법인/자회사</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>