force-app/main/default/objects/Order__c/fields/SalesGroup__c.field-meta.xml
<CustomField>
    <fullName>SalesGroup__c</fullName>
    <description>매출그룹</description>
    <label>Sales Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>물산리조트CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>Endpoint보안그룹(보안기술)</fullName>
            </value>
            <value>
                <fullName>호텔CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>제조/서비스실행그룹(Delivery혁신2)</fullName>
            </value>
            <value>
                <fullName>기술그룹(Cello플랫폼)</fullName>
            </value>
            <value>
                <fullName>물산건설CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>보안관제그룹(보안서비스)</fullName>
            </value>
            <value>
                <fullName>서비스시스템그룹(금융/서비스클라우드운영)</fullName>
            </value>
            <value>
                <fullName>기획그룹(ERP)</fullName>
            </value>
            <value>
                <fullName>유통물류자동화그룹(설비제어)</fullName>
            </value>
            <value>
                <fullName>물산상사CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>물동2그룹(S-ERP)</fullName>
            </value>
            <value>
                <fullName>EHS컨설팅그룹(IT혁신컨설팅)</fullName>
            </value>
            <value>
                <fullName>금융/서비스네트워크그룹(네트워크기술)</fullName>
            </value>
            <value>
                <fullName>사업그룹(유무선서비스)</fullName>
            </value>
            <value>
                <fullName>사업그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>엔지니어링CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>재무그룹(S-ERP)</fullName>
            </value>
            <value>
                <fullName>플랫폼서비스혁신그룹(전자서비스혁신)</fullName>
            </value>
            <value>
                <fullName>Workspace서비스그룹(솔루션개발)</fullName>
            </value>
            <value>
                <fullName>SCM공급컨설팅그룹(디지털SCM)</fullName>
            </value>
            <value>
                <fullName>해외법인/자회사</fullName>
            </value>
            <value>
                <fullName>중공업CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>HRS그룹(IT운영)</fullName>
            </value>
            <value>
                <fullName>제일기획CI그룹(서비스/EPC사업)</fullName>
            </value>
            <value>
                <fullName>정보서비스그룹(IT운영)</fullName>
            </value>
            <value>
                <fullName>VDI플랫폼운영그룹(공통클라우드운영)</fullName>
            </value>
            <value>
                <fullName>해외사업그룹(Intelligent Workspace)</fullName>
            </value>
            <value>
                <fullName>기술지원그룹(S-ERP)</fullName>
            </value>
            <value>
                <fullName>퍼블릭클라우드운영그룹(공통클라우드운영)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>