force-app/main/default/objects/Order__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <description>매출팀</description>
    <label>Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>서비스/EPC사업팀</fullName>
            </value>
            <value>
                <fullName>보안기술팀</fullName>
            </value>
            <value>
                <fullName>Delivery혁신2팀</fullName>
            </value>
            <value>
                <fullName>Cello플랫폼팀</fullName>
            </value>
            <value>
                <fullName>보안서비스팀</fullName>
            </value>
            <value>
                <fullName>금융/서비스클라우드운영팀</fullName>
            </value>
            <value>
                <fullName>ERP사업팀</fullName>
            </value>
            <value>
                <fullName>설비제어팀</fullName>
            </value>
            <value>
                <fullName>S-ERP팀</fullName>
            </value>
            <value>
                <fullName>IT혁신컨설팅팀</fullName>
            </value>
            <value>
                <fullName>네트워크기술팀</fullName>
            </value>
            <value>
                <fullName>유무선서비스사업팀</fullName>
            </value>
            <value>
                <fullName>전자서비스혁신팀</fullName>
            </value>
            <value>
                <fullName>솔루션개발팀</fullName>
            </value>
            <value>
                <fullName>디지털SCM팀</fullName>
            </value>
            <value>
                <fullName>해외법인/자회사</fullName>
            </value>
            <value>
                <fullName>IT운영팀</fullName>
            </value>
            <value>
                <fullName>공통클라우드운영팀</fullName>
            </value>
            <value>
                <fullName>Intelligent Workspace사업팀</fullName>
            </value>
            <value>
                <fullName>한국운영팀</fullName>
            </value>
            <value>
                <fullName>클라우드실행팀</fullName>
            </value>
            <value>
                <fullName>리테일혁신사업팀</fullName>
            </value>
            <value>
                <fullName>보안전략팀</fullName>
            </value>
            <value>
                <fullName>부품/제조클라우드운영팀</fullName>
            </value>
            <value>
                <fullName>플랜트지능화팀</fullName>
            </value>
            <value>
                <fullName>AI서비스사업팀</fullName>
            </value>
            <value>
                <fullName>Analytics팀</fullName>
            </value>
            <value>
                <fullName>디지털마케팅팀</fullName>
            </value>
            <value>
                <fullName>AI서비스개발팀</fullName>
            </value>
            <value>
                <fullName>스마트IoT사업팀</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>