force-app/main/default/objects/Order__c/fields/TotalOrders__c.field-meta.xml
<CustomField>
    <fullName>TotalOrders__c</fullName>
    <description>수주총계</description>
    <label>Total Orders</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>