force-app/main/default/objects/Order__c/fields/TotalSales__c.field-meta.xml
<CustomField>
    <fullName>TotalSales__c</fullName>
    <description>매출총계</description>
    <label>Total Sales</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>